# webezyio

./: .gitignore  .travis.yml  Dockerfile  LICENSE  README.md  conf.py  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
docker/: Dockerfile  docker-bootstrap.sh  frontend-mem-nag.sh
docs/: .buildinfo  JsonSchema.html  builder_api.html  commands.md  contirbuting.html  contirbuting.md  custom_configurations.html  extensions.html  extensions.md  genindex.html  go.html  go.md  index.html  modules.html  objects.inv  py-modindex.html  python.md  search.html  searchindex.js  templating.html  templating.md  typescript.html  vscode_webezyio.html  webezyio.architect.html  webezyio.architect.interfaces.html  webezyio.architect.interfaces.rst  webezyio.architect.recievers.html  webezyio.builder.html  webezyio.builder.plugins.html  webezyio.builder.src.html  webezyio.builder.src.rst  webezyio.cli.commands.html  webezyio.cli.html  webezyio.commons.html  webezyio.commons.protos.html  webezyio.core.html  webezyio.html  webezyio.parser.html  webezyio.rst  webezyio_concepts.html
docs/.doctrees/: environment.pickle  index.doctree
docs/_sources/: builder_api.md.txt  custom_configurations.md.txt  index.rst.txt  modules.rst.txt  vscode_webezyio.md.txt  webezyio.builder.plugins.rst.txt
docs/_sources/commands/: commands.md.txt
docs/_sources/plugins/: custom_plugins.md.txt  index.rst.txt
docs/_sources/production/: monitor.md.txt
docs/_sources/toturials/: new-project.md.txt
docs/commands/: commands.html  index.html
docs/concepts/: soa.html
docs/plugins/: builder.html  index.html
docs/plugins/core/: WebezyGoClient.html  WebezyPyClient.html  WebezyPyServer.html  WebezyTsClient.html  WebezyTsServer.html
docs/production/: docker.html  monitor.html  overview.html
docs/protobuf/: extensions.html  index.html  well_known.html
docs/source/: JsonSchema.md  conf.py  contirbuting.md  go.md  index.rst  webezyio.cli.rst  webezyio.commons.protos.rst  webezyio.commons.rst  webezyio_concepts.md
docs/source/concepts/: index.rst
docs/source/production/: index.rst  overview.md
docs/source/protobuf/: overview.md
docs/toturials/: edit-resource.html  generate-message.html  generate-package.html  generate-rpc.html
samples/python/: .gitignore  README.md
samples/python/services/: SampleService.py
samples/typescript/: .gitignore  README.md  package-lock.json  package.json  server.ts  tsconfig.json
samples/typescript/protos/: SamplePackage.proto  SampleService.proto
sylk/: __init__.py  config.py
sylk.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
sylk/architect/: __init__.py  commands.py  hooks.py  invoker.py
sylk/builder/: __init__.py
sylk/cli/: __main__.py  main.py  prompter.py  theme.py
sylk/commons/: client_wrapper.py  config.py  errors.py  file_system.py  helpers.py  init.sh  node.js  parser.py  pretty.py  resources.py  sylk.py
sylk/helpers/: prompter.py  theme.py
webezyio/: __init__.py  config.py
webezyio.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
webezyio/architect/: __init__.py  commands.py  hooks.py  invoker.py
webezyio/builder/: __init__.py
webezyio/cli/: __main__.py  main.py  prompter.py  theme.py
webezyio/commons/: client_wrapper.py  config.py  errors.py  file_system.py  helpers.py  init.sh  node.js  parser.py  platform.py  pretty.py  resources.py
webezyio/core/: Analytics_pb2.py  WebezyAnalytics_pb2.py  WebezyCore_pb2.py  WebezyCore_pb2_grpc.py  __init__.py
webezyio/tests/: unit-test.py
(+216 files in other folders)
